--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ button:focus-visible {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url("./images/home-bg.jpg");
+  background-image: url("/images/home-bg.jpg");
   background-size: cover;
   background-position: center;
   filter: blur(6px);
